Include libraries as submodules, build 32 bit binary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,14 @@
 cmake_minimum_required(VERSION 3.17)
 project(memory_editor)
-
 set(CMAKE_CXX_STANDARD 20)
+add_subdirectory("lib")
 
-find_package(glfw3 REQUIRED)
-find_package(imgui REQUIRED)
-find_package(OpenGL REQUIRED)
-link_libraries(glfw imgui OpenGL::GL)
+find_package(IMGUI REQUIRED)
+link_libraries(IMGUI)
 include_directories(include)
+add_compile_options(-O1 -m32)
+add_link_options(-m32)
 
 add_executable(${PROJECT_NAME}
-        src/imgui_impl_glfw.cpp
-        src/imgui_impl_opengl3.cpp
         src/window.cpp
         src/main.cpp)
