Prepare for dumb stuff

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/glfw"]
 	path = lib/glfw
 	url = https://github.com/glfw/glfw
+[submodule "lib/kl2"]
+	path = lib/kl2
+	url = https://github.com/entriphy/kl2_lv_decomp.git
