--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(kl2_pine)
 set(CMAKE_CXX_STANDARD 20)
 
 # Global flags
-add_compile_options(-O0 -m32 -DSCE)
+add_compile_options(-O0 -m32 -DPS2_TYPE_STUBS)
 add_link_options(-m32)
 
 # GLFW
@@ -20,22 +20,33 @@ target_sources(IMGUI
     PRIVATE ${IMGUI_DIR}/imgui_demo.cpp ${IMGUI_DIR}/imgui_draw.cpp ${IMGUI_DIR}/imgui_tables.cpp ${IMGUI_DIR}/imgui_widgets.cpp ${IMGUI_DIR}/imgui.cpp
     PRIVATE ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
 )
-target_include_directories( IMGUI
+target_include_directories(IMGUI
     PUBLIC ${IMGUI_DIR}
     PUBLIC ${IMGUI_DIR}/backends
     PUBLIC ${SDL3_DIR}/include
 )
-target_link_libraries(IMGUI PUBLIC glfw ${CMAKE_DL_LIBS})
+target_link_libraries(IMGUI
+    PUBLIC glfw ${CMAKE_DL_LIBS}
+)
 
 # Klonoa 2 Decomp
-# set(KL2_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/kl2)
-# set(KL2_INCLUDE_DIR ${KL2_DIR}/include)
+set(KL2_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/kl2)
+set(KL2_INCLUDE_DIR ${KL2_DIR}/include)
 
 # Klonoa 2 PINE
 find_package(IMGUI REQUIRED)
-link_libraries(IMGUI)
-include_directories(include ${KL2_INCLUDE_DIR} /opt/sce/common/include /opt/sce/ee/include)
 add_executable(${PROJECT_NAME}
-        src/window.cpp src/main.cpp
+    src/main.cpp
+    src/window.cpp
+    src/draw/drawable.cpp
+    src/draw/hato_draw.cpp
+    src/draw/nakano_draw.cpp
+    src/draw/take_draw.cpp
+)
+target_link_libraries(${PROJECT_NAME} IMGUI)
+target_include_directories(${PROJECT_NAME} PRIVATE
+    include
+    ${KL2_DIR}/include
+    ${KL2_DIR}/src
 )
 
