--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(kl2_pine)
 set(CMAKE_CXX_STANDARD 20)
 
 # Global flags
-add_compile_options(-m32 -DPS2_TYPE_STUBS)
+add_compile_options(-m32)
 add_link_options(-m32)
 
 # SDL
@@ -34,18 +34,20 @@ set(KL2_INCLUDE_DIR ${KL2_DIR}/include)
 add_executable(${PROJECT_NAME}
     src/main.cpp
     src/window.cpp
-    src/draw/drawable.cpp
     src/draw/hato_draw.cpp
     src/draw/nakano_draw.cpp
     src/draw/take_draw.cpp
 )
 target_link_libraries(${PROJECT_NAME} IMGUI SDL3::SDL3)
+target_compile_options(${PROJECT_NAME} PUBLIC -DPS2_TYPE_STUBS)
 if (WIN32)
     target_link_libraries(${PROJECT_NAME} wsock32 ws2_32)
     add_custom_command(
         TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:SDL3::SDL3>" "$<TARGET_FILE_DIR:${PROJECT_NAME}>"
     )
+else()
+    target_compile_options(${PROJECT_NAME} PUBLIC -Wno-ignored-attributes)
 endif()
 target_include_directories(${PROJECT_NAME} PRIVATE
     include
